force-app/main/default/objects/OCLQS_NameValuePair__mdt/OCLQS_NameValuePair__mdt.object-meta.xml
<CustomObject>
    <description>This metadata type will be used to store name value pair type of configurations.</description>
    <label>OCLQS Name Value Pair</label>
    <pluralLabel>OCLQS Name Value Pairs</pluralLabel>
</CustomObject>