force-app/main/default/objects/OCLQS_NameValuePair__mdt/fields/Value1__c.field-meta.xml
<CustomField>
    <fullName>Value1__c</fullName>
    <label>Value1</label>
    <type>TextArea</type>
</CustomField>