force-app/main/default/objects/OCLQS_NameValuePair__mdt/fields/Value2__c.field-meta.xml
<CustomField>
    <fullName>Value2__c</fullName>
    <label>Value2</label>
    <type>TextArea</type>
</CustomField>