force-app/main/default/objects/OCLQS_NameValuePair__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value for configuration</description>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>